dataset1235/2025-2/610742602/users/1126757059/executions/677928262_1078076002.log
== SUBMISSION (2025-08-28 21:03:30)
-- CODE: 
x=float(input("digite um numero: "))
print(X)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(X)
          ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(X)
          ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:03:42)
-- CODE: 
x=float(input("digite um numero: "))
print(X)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(X)
          ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(X)
          ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:03:58)
-- CODE: 
x=float(input("digite um numero: "))
print(x)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
digite um numero: 1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
digite um numero: 1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:03:22)
-- CODE: 
x=float(input("digite um numero: "))
print(X)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(X)
          ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(X)
          ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
